tests/build/impl_ui_node/delegate_list_expr_error_incorrect_type.stderr
error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
   --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
    |
9   | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
    |                                                                 ^^^^^^^^^^^^^^^ the trait `UiNodeList` is not implemented for `NotANodeList`
    |
   ::: $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate_list_mut<U: UiNodeList + ?Sized>(d: &mut U) -> &mut U {
    |                                 ---------- required by this bound in `delegate_list_mut`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
 --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
  |
9 | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
  |
  = note: required by `zero_ui::core::UiNodeList::init_all`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
 --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
  |
9 | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
  |
  = note: required by `zero_ui::core::UiNodeList::deinit_all`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
 --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
  |
9 | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
  |
  = note: required by `zero_ui::core::UiNodeList::update_all`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
  --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
   |
9  | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
   |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
   |
  ::: $WORKSPACE/zero-ui-core/src/ui_list.rs
   |
   |     fn event_all<EU: EventUpdate>(&mut self, ctx: &mut WidgetContext, update: EU, args: &EU::Args);
   |                      ----------- required by this bound in `zero_ui::core::UiNodeList::event_all`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
   --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:32
    |
9   | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
    |                                ^^^^^^^^^^^ the trait `UiNodeList` is not implemented for `NotANodeList`
    |
   ::: $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate_list<U: UiNodeList + ?Sized>(d: &U) -> &U {
    |                             ---------- required by this bound in `delegate_list`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
  --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
   |
9  | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
   |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
   |
  ::: $WORKSPACE/zero-ui-core/src/ui_list.rs
   |
   |         O: FnMut(usize) -> LayoutPoint;
   |            --------------------------- required by this bound in `zero_ui::core::UiNodeList::render_all`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
 --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
  |
9 | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
  |
  = note: required by `zero_ui::core::UiNodeList::render_update_all`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
  --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
   |
9  | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
   |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
   |
  ::: $WORKSPACE/zero-ui-core/src/ui_list.rs
   |
   |         F: FnMut(usize, &mut LayoutContext) -> LayoutSize;
   |            ---------------------------------------------- required by this bound in `zero_ui::core::UiNodeList::arrange_all`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
  --> $DIR/delegate_list_expr_error_incorrect_type.rs:9:65
   |
9  | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
   |                                                                 ^ the trait `UiNodeList` is not implemented for `NotANodeList`
   |
  ::: $WORKSPACE/zero-ui-core/src/ui_list.rs
   |
   |     fn measure_all<A, D>(&mut self, ctx: &mut LayoutContext, available_size: A, desired_size: D)
   |                       - required by this bound in `zero_ui::core::UiNodeList::measure_all`
